CBV로 블로그 포스트 목록 페이지 만들기

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Blog</h1>
 
-    {% for p in posts %}
+    {% for p in post_list %} {# PostList는 post_list에 자동으로 값을 저장 #}
     <hr />
     <h3><a href="{{ p.get_absolute_url }}">{{ p.title }}</a></h3>
     <h4>{{ p.created_at }}</h4>
