포스트 목록 페이지에 대표 이미지 출력하기

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -141,12 +141,11 @@
           {% for p in post_list %}
           <!-- Blog post-->
           <div class="card mb-4">
-            <a href="#!"
-              ><img
-                class="card-img-top"
-                src="https://placehold.it/750x300"
-                alt="Card image cap"
-            /></a>
+            <img
+              class="card-img-top"
+              src="{{ p.head_image.url}}"
+              alt="{{p.title}}"
+            />
             <div class="card-body">
               <div class="small text-muted">January 1, 2023</div>
               <h2 class="card-title">{{p.title}}</h2>
