포트 상세 페이지에 대표 이미지 출력하기

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -84,8 +84,8 @@
           <!-- Preview Image -->
           <img
             class="img-fluid rounded"
-            src="http://placehold.it/900x300"
-            alt=""
+            src="{{ post.head_image.url }}"
+            alt="{{ post.title }}"
           />
 
           <hr />
