포스트 목록, 상세 페이지에서 대표 이미지없을 때 문제 해결

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -82,12 +82,19 @@
           <hr />
 
           <!-- Preview Image -->
+          {% if post.head_image %}
           <img
             class="img-fluid rounded"
             src="{{ post.head_image.url }}"
             alt="{{ post.title }}"
           />
-
+          {% else %}
+          <img
+            class="card-img-top"
+            src="https://picsum.photos/seed/{{p.id}}/600/200"
+            alt="{{post.title}}"
+          />
+          {%endif%}
           <hr />
 
           <!-- Post Content -->
