--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -141,11 +141,19 @@
           {% for p in post_list %}
           <!-- Blog post-->
           <div class="card mb-4">
+            {% if p.head_image %}
             <img
               class="card-img-top"
               src="{{ p.head_image.url}}"
               alt="{{p.title}}"
             />
+            {%else %}
+            <img
+              class="card-img-top"
+              src="https://picsum.photos/seed/{{p.id}}/600/200"
+              alt="{{p.title}}"
+            />
+            {% endif %}
             <div class="card-body">
               <div class="small text-muted">January 1, 2023</div>
               <h2 class="card-title">{{p.title}}</h2>
