--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,25 +1,21 @@
 <!DOCTYPE html>
 {% load static%}
 <html lang="ko">
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
 
-    <title>{{ post.title }} - Blog</title>
+  <head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+    <meta name="description" content=""/>
+    <meta name="author" content=""/>
+
+    <title>{{ post.title }}- Blog</title>
 
     <!-- Bootstrap core CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"/>
 
     <!-- Custom styles for this template -->
-    <link href="{% static 'blog/css/blog-post.css' %}" rel="stylesheet" />
+    <link href="{% static 'blog/css/blog-post.css' %}" rel="stylesheet"/>
+    <script src="https://kit.fontawesome.com/c85c5556f3.js"></script>
   </head>
 
   <body>
@@ -27,22 +23,13 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#">Start Bootstrap</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarResponsive"
-          aria-controls="navbarResponsive"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#"
-                >Home
+              <a class="nav-link" href="#">Home
                 <span class="sr-only">(current)</span>
               </a>
             </li>
@@ -74,192 +61,166 @@
             <a href="#">작성자명 쓸 위치(개발예정)</a>
           </p>
 
-          <hr />
+          <hr/>
 
           <!-- Date/Time -->
-          <p>Posted on {{post.created_at}}</p>
+          <p>Posted on
+            {{post.created_at}}</p>
 
-          <hr />
+          <hr/>
 
           <!-- Preview Image -->
           {% if post.head_image %}
-          <img
-            class="img-fluid rounded"
-            src="{{ post.head_image.url }}"
-            alt="{{ post.title }}"
-          />
+            <img class="img-fluid rounded" src="{{ post.head_image.url }}" alt="{{ post.title }}"/>
           {% else %}
-          <img
-            class="card-img-top"
-            src="https://picsum.photos/seed/{{p.id}}/600/200"
-            alt="{{post.title}}"
-          />
-          {%endif%}
-          <hr />
+            <img class="card-img-top" src="https://picsum.photos/seed/{{p.id}}/600/200" alt="{{post.title}}"/>
+            {%endif%}
+            <hr/>
 
-          <!-- Post Content -->
-          <p>{{ post.content}}</p>
+            <!-- Post Content -->
+            <p>{{ post.content}}</p>
 
-          <hr />
+            <!--파일 다운로드 버튼 생성-->
+            {% if post.file_upload %}
+              <a href="{{ post.file_upload.url }}" type="button" class="btn btn-outline-dark" roll="button" download="download">Download:
+                {% if post.get_file_ext == 'xlsx' or post.get_file_ext == 'xls' %}
+                  <i class="fa-regular fa-file-excel"></i>
+                {% elif post.get_file_ext == 'csv' %}
+                  <i class="fa-regular fa-file-csv"></i>
+                {% elif post.get_file_ext == 'docx'%}
+                  <i class="fa-regular fa-file-word"></i>
+                {% else %}
+                  <i class="fa-regular fa-file"></i>
+                  {%endif%}
+                  {{ post.get_file_name }}</a>
+                {%endif%}
 
-          <!-- Comments Form -->
-          <div class="card my-4">
-            <h5 class="card-header">Leave a Comment:</h5>
-            <div class="card-body">
-              <form>
-                <div class="form-group">
-                  <textarea class="form-control" rows="3"></textarea>
+                <hr/>
+
+                <!-- Comments Form -->
+                <div class="card my-4">
+                  <h5 class="card-header">Leave a Comment:</h5>
+                  <div class="card-body">
+                    <form>
+                      <div class="form-group">
+                        <textarea class="form-control" rows="3"></textarea>
+                      </div>
+                      <button type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                  </div>
                 </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-              </form>
-            </div>
-          </div>
 
-          <!-- Single Comment -->
-          <div class="media mb-4">
-            <img
-              class="d-flex mr-3 rounded-circle"
-              src="http://placehold.it/50x50"
-              alt=""
-            />
-            <div class="media-body">
-              <h5 class="mt-0">Commenter Name</h5>
-              Cras sit amet nibh libero, in gravida nulla. Nulla vel metus
-              scelerisque ante sollicitudin. Cras purus odio, vestibulum in
-              vulputate at, tempus viverra turpis. Fusce condimentum nunc ac
-              nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-            </div>
-          </div>
-
-          <!-- Comment with nested comments -->
-          <div class="media mb-4">
-            <img
-              class="d-flex mr-3 rounded-circle"
-              src="http://placehold.it/50x50"
-              alt=""
-            />
-            <div class="media-body">
-              <h5 class="mt-0">Commenter Name</h5>
-              Cras sit amet nibh libero, in gravida nulla. Nulla vel metus
-              scelerisque ante sollicitudin. Cras purus odio, vestibulum in
-              vulputate at, tempus viverra turpis. Fusce condimentum nunc ac
-              nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-
-              <div class="media mt-4">
-                <img
-                  class="d-flex mr-3 rounded-circle"
-                  src="http://placehold.it/50x50"
-                  alt=""
-                />
-                <div class="media-body">
-                  <h5 class="mt-0">Commenter Name</h5>
-                  Cras sit amet nibh libero, in gravida nulla. Nulla vel metus
-                  scelerisque ante sollicitudin. Cras purus odio, vestibulum in
-                  vulputate at, tempus viverra turpis. Fusce condimentum nunc ac
-                  nisi vulputate fringilla. Donec lacinia congue felis in
-                  faucibus.
+                <!-- Single Comment -->
+                <div class="media mb-4">
+                  <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt=""/>
+                  <div class="media-body">
+                    <h5 class="mt-0">Commenter Name</h5>
+                    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                  </div>
                 </div>
-              </div>
 
-              <div class="media mt-4">
-                <img
-                  class="d-flex mr-3 rounded-circle"
-                  src="http://placehold.it/50x50"
-                  alt=""
-                />
-                <div class="media-body">
-                  <h5 class="mt-0">Commenter Name</h5>
-                  Cras sit amet nibh libero, in gravida nulla. Nulla vel metus
-                  scelerisque ante sollicitudin. Cras purus odio, vestibulum in
-                  vulputate at, tempus viverra turpis. Fusce condimentum nunc ac
-                  nisi vulputate fringilla. Donec lacinia congue felis in
-                  faucibus.
+                <!-- Comment with nested comments -->
+                <div class="media mb-4">
+                  <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt=""/>
+                  <div class="media-body">
+                    <h5 class="mt-0">Commenter Name</h5>
+                    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+
+                    <div class="media mt-4">
+                      <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt=""/>
+                      <div class="media-body">
+                        <h5 class="mt-0">Commenter Name</h5>
+                        Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                      </div>
+                    </div>
+
+                    <div class="media mt-4">
+                      <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt=""/>
+                      <div class="media-body">
+                        <h5 class="mt-0">Commenter Name</h5>
+                        Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
-            </div>
-          </div>
-        </div>
 
-        <!-- Sidebar Widgets Column -->
-        <div class="col-md-4">
-          <!-- Search Widget -->
-          <div class="card my-4">
-            <h5 class="card-header">Search</h5>
-            <div class="card-body">
-              <div class="input-group">
-                <input
-                  type="text"
-                  class="form-control"
-                  placeholder="Search for..."
-                />
-                <span class="input-group-append">
-                  <button class="btn btn-secondary" type="button">Go!</button>
-                </span>
-              </div>
-            </div>
-          </div>
-
-          <!-- Categories Widget -->
-          <div class="card my-4">
-            <h5 class="card-header">Categories</h5>
-            <div class="card-body">
-              <div class="row">
-                <div class="col-lg-6">
-                  <ul class="list-unstyled mb-0">
-                    <li>
-                      <a href="#">Web Design</a>
-                    </li>
-                    <li>
-                      <a href="#">HTML</a>
-                    </li>
-                    <li>
-                      <a href="#">Freebies</a>
-                    </li>
-                  </ul>
+              <!-- Sidebar Widgets Column -->
+              <div class="col-md-4">
+                <!-- Search Widget -->
+                <div class="card my-4">
+                  <h5 class="card-header">Search</h5>
+                  <div class="card-body">
+                    <div class="input-group">
+                      <input type="text" class="form-control" placeholder="Search for..."/>
+                      <span class="input-group-append">
+                        <button class="btn btn-secondary" type="button">Go!</button>
+                      </span>
+                    </div>
+                  </div>
                 </div>
-                <div class="col-lg-6">
-                  <ul class="list-unstyled mb-0">
-                    <li>
-                      <a href="#">JavaScript</a>
-                    </li>
-                    <li>
-                      <a href="#">CSS</a>
-                    </li>
-                    <li>
-                      <a href="#">Tutorials</a>
-                    </li>
-                  </ul>
+
+                <!-- Categories Widget -->
+                <div class="card my-4">
+                  <h5 class="card-header">Categories</h5>
+                  <div class="card-body">
+                    <div class="row">
+                      <div class="col-lg-6">
+                        <ul class="list-unstyled mb-0">
+                          <li>
+                            <a href="#">Web Design</a>
+                          </li>
+                          <li>
+                            <a href="#">HTML</a>
+                          </li>
+                          <li>
+                            <a href="#">Freebies</a>
+                          </li>
+                        </ul>
+                      </div>
+                      <div class="col-lg-6">
+                        <ul class="list-unstyled mb-0">
+                          <li>
+                            <a href="#">JavaScript</a>
+                          </li>
+                          <li>
+                            <a href="#">CSS</a>
+                          </li>
+                          <li>
+                            <a href="#">Tutorials</a>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <!-- Side Widget -->
+                <div class="card my-4">
+                  <h5 class="card-header">Side Widget</h5>
+                  <div class="card-body">
+                    You can put anything you want inside of these side widgets. They are easy to use, and feature the new Bootstrap 4 card containers!
+                  </div>
                 </div>
               </div>
             </div>
+            <!-- /.row -->
           </div>
+          <!-- /.container -->
 
-          <!-- Side Widget -->
-          <div class="card my-4">
-            <h5 class="card-header">Side Widget</h5>
-            <div class="card-body">
-              You can put anything you want inside of these side widgets. They
-              are easy to use, and feature the new Bootstrap 4 card containers!
+          <!-- Footer -->
+          <footer class="py-5 bg-dark">
+            <div class="container">
+              <p class="m-0 text-center text-white">
+                Copyright &copy; Your Website 2020
+              </p>
             </div>
-          </div>
-        </div>
-      </div>
-      <!-- /.row -->
-    </div>
-    <!-- /.container -->
+            <!-- /.container -->
+          </footer>
 
-    <!-- Footer -->
-    <footer class="py-5 bg-dark">
-      <div class="container">
-        <p class="m-0 text-center text-white">
-          Copyright &copy; Your Website 2020
-        </p>
-      </div>
-      <!-- /.container -->
-    </footer>
+          <!-- Bootstrap core JavaScript -->
+          <script src="vendor/jquery/jquery.min.js"></script>
+          <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+        </body>
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  </body>
-</html>
+      </html>
