--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 {% load static%}
 <html lang="ko">
+
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-    />
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"/>
     <title>Blog | Do It 장고 웹사이트</title>
     <script src="https://kit.fontawesome.com/c85c5556f3.js"></script>
     <!-- <link href=" {% static 'blog/bootstrap/style.css' %}"> -->
@@ -17,23 +15,14 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
         <a class="navbar-brand" href="./index.html">Do It Django</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarNavDropdown"
-          aria-controls="navbarNavDropdown"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="./index.html"
-                >Home <span class="sr-only">(current)</span></a
-              >
+              <a class="nav-link" href="./index.html">Home
+                <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./blog_list.html">Blog</a>
@@ -42,13 +31,7 @@
               <a class="nav-link" href="./about_me.html">About me</a>
             </li>
             <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                role="button"
-                data-toggle="dropdown"
-                aria-expanded="false"
-              >
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
                 Dropdown link
               </a>
               <div class="dropdown-menu">
@@ -60,73 +43,47 @@
           </ul>
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a
-                class="nav-link"
-                href="#"
-                data-toggle="modal"
-                data-target="#loginModal"
-                >Log In</a
-              >
+              <a class="nav-link" href="#" data-toggle="modal" data-target="#loginModal">Log In</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
     <!-- Modal -->
-    <div
-      class="modal fade"
-      id="loginModal"
-      tabindex="-1"
-      aria-labelledby="logainModalLabel"
-      aria-hidden="true"
-    >
+    <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="logainModalLabel" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="loginModal">
-              <i class="fa-solid fa-right-to-bracket"></i> Log In
+              <i class="fa-solid fa-right-to-bracket"></i>
+              Log In
             </h5>
-            <button
-              type="button"
-              class="close"
-              data-dismiss="modal"
-              aria-label="Close"
-            >
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
           <div class="modal-body">
             <div class="row">
               <div class="col-md-6 col-sm-12">
-                <button
-                  type="button"
-                  class="btn btn-outline-dark btn-block btn-sm"
-                >
-                  <i class="fa-brands fa-google"></i> Log in with Google
+                <button type="button" class="btn btn-outline-dark btn-block btn-sm">
+                  <i class="fa-brands fa-google"></i>
+                  Log in with Google
                 </button>
-                <button
-                  type="button"
-                  class="btn btn-outline-dark btn-block btn-sm"
-                >
-                  <i class="fa-regular fa-user"></i> Log in with Username
+                <button type="button" class="btn btn-outline-dark btn-block btn-sm">
+                  <i class="fa-regular fa-user"></i>
+                  Log in with Username
                 </button>
               </div>
               <div class="col-md-6 col-sm-12">
-                <button
-                  type="button"
-                  class="btn btn-outline-dark btn-block btn-sm"
-                >
-                  <i class="fa-regular fa-envelope"></i> Sign up with E-mail
+                <button type="button" class="btn btn-outline-dark btn-block btn-sm">
+                  <i class="fa-regular fa-envelope"></i>
+                  Sign up with E-mail
                 </button>
               </div>
             </div>
           </div>
           <div class="modal-footer">
-            <button
-              type="button"
-              class="btn btn-secondary"
-              data-dismiss="modal"
-            >
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">
               Close
             </button>
           </div>
@@ -139,35 +96,30 @@
           <h1>Blog</h1>
 
           {% for p in post_list %}
-          <!-- Blog post-->
-          <div class="card mb-4">
-            {% if p.head_image %}
-            <img
-              class="card-img-top"
-              src="{{ p.head_image.url}}"
-              alt="{{p.title}}"
-            />
-            {%else %}
-            <img
-              class="card-img-top"
-              src="https://picsum.photos/seed/{{p.id}}/600/200"
-              alt="{{p.title}}"
-            />
-            {% endif %}
-            <div class="card-body">
-              <div class="small text-muted">January 1, 2023</div>
-              <h2 class="card-title">{{p.title}}</h2>
-              <p class="card-text">{{p.content}}</p>
-              <a class="btn btn-primary" href="{{ p.get_absolute_url }}"
-                >Read more →</a
-              >
+            <!-- Blog post-->
+            <div class="card mb-4">
+              {% if p.head_image %}
+                <img class="card-img-top" src="{{ p.head_image.url}}" alt="{{p.title}}"/>
+              {%else %}
+                <img class="card-img-top" src="https://picsum.photos/seed/{{p.id}}/600/200" alt="{{p.title}}"/>
+              {% endif %}
+              <div class="card-body">
+                <div class="small text-muted">January 1, 2023</div>
+                <h2 class="card-title">{{p.title}}</h2>
+                {% if p.hook_text %}
+                  <h5 class="text-muted">{{p.hook_text}}</h5>
+                {% endif %}
+                <p class="card-text">{{p.content | truncatewords:45}}</p>
+                <a class="btn btn-primary" href="{{ p.get_absolute_url }}">Read more →</a>
+              </div>
+              <div class="card-footer text-muted">
+                Posted on
+                {{ p.created_at }}
+                by
+                <a href="#">작성자명 쓸 위치(개발예정)</a>
+              </div>
             </div>
-            <div class="card-footer text-muted">
-              Posted on {{ p.created_at }} by
-              <a href="#">작성자명 쓸 위치(개발예정)</a>
-            </div>
-          </div>
-          {% endfor%}
+          {% endfor %}
 
           <!-- Pagination-->
           <ul class="pagination justify-content-center mb-4">
@@ -185,19 +137,9 @@
             <div class="card-header">Search</div>
             <div class="card-body">
               <div class="input-group">
-                <input
-                  class="form-control"
-                  type="text"
-                  placeholder="Enter search term..."
-                  aria-label="Enter search term..."
-                  aria-describedby="button-search"
-                />
+                <input class="form-control" type="text" placeholder="Enter search term..." aria-label="Enter search term..." aria-describedby="button-search"/>
                 <span class="input-group-append">
-                  <button
-                    class="btn btn-primary"
-                    id="button-search"
-                    type="button"
-                  >
+                  <button class="btn btn-primary" id="button-search" type="button">
                     Go!
                   </button>
                 </span>
@@ -211,16 +153,28 @@
               <div class="row">
                 <div class="col-sm-6">
                   <ul class="list-unstyled mb-0">
-                    <li><a href="#!">Web Design</a></li>
-                    <li><a href="#!">HTML</a></li>
-                    <li><a href="#!">Freebies</a></li>
+                    <li>
+                      <a href="#!">Web Design</a>
+                    </li>
+                    <li>
+                      <a href="#!">HTML</a>
+                    </li>
+                    <li>
+                      <a href="#!">Freebies</a>
+                    </li>
                   </ul>
                 </div>
                 <div class="col-sm-6">
                   <ul class="list-unstyled mb-0">
-                    <li><a href="#!">JavaScript</a></li>
-                    <li><a href="#!">CSS</a></li>
-                    <li><a href="#!">Tutorials</a></li>
+                    <li>
+                      <a href="#!">JavaScript</a>
+                    </li>
+                    <li>
+                      <a href="#!">CSS</a>
+                    </li>
+                    <li>
+                      <a href="#!">Tutorials</a>
+                    </li>
                   </ul>
                 </div>
               </div>
@@ -241,4 +195,5 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
+
 </html>
