--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -15,84 +15,7 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container">
-        <a class="navbar-brand" href="./index.html">Do It Django</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="./index.html">Home
-                <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./blog_list.html">Blog</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./about_me.html">About me</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
-                Dropdown link
-              </a>
-              <div class="dropdown-menu">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <a class="dropdown-item" href="#">Something else here</a>
-              </div>
-            </li>
-          </ul>
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="#" data-toggle="modal" data-target="#loginModal">Log In</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <!-- Modal -->
-    <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="logainModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="loginModal">
-              <i class="fa-solid fa-right-to-bracket"></i>
-              Log In
-            </h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <div class="row">
-              <div class="col-md-6 col-sm-12">
-                <button type="button" class="btn btn-outline-dark btn-block btn-sm">
-                  <i class="fa-brands fa-google"></i>
-                  Log in with Google
-                </button>
-                <button type="button" class="btn btn-outline-dark btn-block btn-sm">
-                  <i class="fa-regular fa-user"></i>
-                  Log in with Username
-                </button>
-              </div>
-              <div class="col-md-6 col-sm-12">
-                <button type="button" class="btn btn-outline-dark btn-block btn-sm">
-                  <i class="fa-regular fa-envelope"></i>
-                  Sign up with E-mail
-                </button>
-              </div>
-            </div>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">
-              Close
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
+    {% include 'blog/navbar.html'%}
     <div class="container">
       <div class="row my-3">
         <div class="col-md-8 col-lg-9" id="main-area">
@@ -150,14 +73,7 @@
         </div>
       </div>
     </div>
-    <!-- Footer-->
-    <footer class="py-5 bg-dark">
-      <div class="container">
-        <p class="m-0 text-center text-white">
-          Copyright &copy; Do IT Django 2023
-        </p>
-      </div>
-    </footer>
+    {% include 'blog/footer.html' %}
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
