--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -37,36 +37,20 @@
             </div>
           </div>
           <!-- Categories widget-->
-          <div class="card mb-4">
+          <div class="card mb-4" id="categories-card">
             <div class="card-header">Categories</div>
             <div class="card-body">
               <div class="row">
-                <div class="col-sm-6">
-                  <ul class="list-unstyled mb-0">
+                <ul>
+                  {% for category in categories %}
                     <li>
-                      <a href="#!">Web Design</a>
+                      <a href="#">{{ category.name }}({{ category.post_set.count }})</a>
                     </li>
-                    <li>
-                      <a href="#!">HTML</a>
-                    </li>
-                    <li>
-                      <a href="#!">Freebies</a>
-                    </li>
-                  </ul>
-                </div>
-                <div class="col-sm-6">
-                  <ul class="list-unstyled mb-0">
-                    <li>
-                      <a href="#!">JavaScript</a>
-                    </li>
-                    <li>
-                      <a href="#!">CSS</a>
-                    </li>
-                    <li>
-                      <a href="#!">Tutorials</a>
-                    </li>
-                  </ul>
-                </div>
+                  {% endfor %}
+                  <li>
+                    <a href="#">미분류({{ no_category_post_count }})</a>
+                  </li>
+                </ul>
               </div>
             </div>
           </div>
