--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -43,6 +43,16 @@
         <!-- Post Content -->
         <p>{{ post.content}}</p>
 
+        <!--Tag Content-->
+        {% if post.tags.exists %}
+          <i class="fa-solid fa-tags"></i>
+          {% for tag in post.tags.iterator %}
+            <a href="{{ tag.get_absolute_url }}">
+              <span class="badge badge-light">{{ tag }}</span></a>
+          {% endfor %}
+          <br/><br/>
+        {% endif %}
+
         <!--파일 다운로드 버튼 생성-->
         {% if post.file_upload %}
           <a href="{{ post.file_upload.url }}" type="button" class="btn btn-outline-dark" roll="button" download="download">Download:
