태그 페이지 만들기

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -6,6 +6,12 @@
     {% if category %}
       <span class="badge badge-secondary">{{ category }}</span>
     {% endif %}
+    {% if tag %}
+      <span class="badge badge-light">
+        <i class="fa-solid fa-tags"></i>
+        {{ tag }}
+        ({{ tag.post_set.count }})</span>
+    {% endif %}
   </h1>
 
   {%if post_list.exists %}
