--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"/>
     <title>
-      {% block head_title %}Blog | Do it Django 웹 사이트
-      {% endblock %}
+      {% block head_title %}Blog | Do it Django 웹 사이트{% endblock %}
     </title>
     <script src="https://kit.fontawesome.com/c85c5556f3.js"></script>
     <!-- <link href=" {% static 'blog/bootstrap/style.css' %}"> -->
