--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,9 +1,6 @@
 {% extends 'blog/base.html' %}
 
-{% block head_title %}
-  {{ post.title }}
-  | Blog
-{% endblock %}
+{% block head_title %}{{ post.title }}| Blog{% endblock %}
 
 {% block main_area %}
   <div id="post-area">
