--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -22,6 +22,10 @@
       </p>
 
       <hr/>
+      <!-- 수정버튼 -->
+      {% if user.is_authenticated and user == post.author %}
+        <a type="button" href="/blog/update_post/{{ post.pk }}" class="btn btn-dark btn-sm float-right"><i class="fa-solid fa-pencil"></i>&nbsp; Edit Post</a>
+      {% endif %}
 
       <!-- Date/Time -->
       <p>Posted on
