포스트 수정할 때 텍스트로 태그 지정하기

--- a/blog/templates/blog/post_update_form.html
+++ b/blog/templates/blog/post_update_form.html
@@ -9,6 +9,10 @@
     <table>
       {{ form }}
       </table>
+      <tr>
+        <th><label for="id_tags_str">Tags:</label></th>
+        <td><input type="text" id="id_tags_str" name="tags_str" value="{{ tags_str_default }}"></td>
+      </tr>
       <button type="submit" class="btn btn-dark float-right">Submit</button>
     </form>
   {% endblock %}
