django-crispy-forms 적용하기

--- a/blog/templates/blog/post_update_form.html
+++ b/blog/templates/blog/post_update_form.html
@@ -1,5 +1,5 @@
 {% extends 'blog/base_full_with.html' %}
-
+{% load crispy_forms_tags %}
 {% block head_title%}Edit Post - Blog{% endblock %}
 {% block main_area %}
   <h1>Edit Post</h1>
@@ -7,12 +7,12 @@
 
   <form method="post" enctype="multipart/form-data">{% csrf_token %}
     <table>
-      {{ form }}
+      {{ form | crispy }}
       </table>
-      <tr>
-        <th><label for="id_tags_str">Tags:</label></th>
-        <td><input type="text" id="id_tags_str" name="tags_str" value="{{ tags_str_default }}"></td>
-      </tr>
+      <div id="div_id_tags_str">
+        <label for="id_tags_str">Tags:</label>
+        <input type="text" id="id_tags_str" name="tags_str" class="textinput textInput form-control" value="{{ tags_str_default }}">
+      </div>
       <button type="submit" class="btn btn-dark float-right">Submit</button>
     </form>
   {% endblock %}
