content 입력란에 마크다운 적용하기

--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -3,17 +3,18 @@
 {% block head_title%}Create Post - Blog{% endblock %}
 
 {% block main_area %}
-  <h1>Create a New Post</h1>
-  <hr/>
+<h1>Create a New Post</h1>
+<hr/>
 
-  <form method="post" enctype="multipart/form-data">{% csrf_token %}
-    <table>
-      {{ form | crispy }}
-      <div id="div_id_tags_str">
-        <label for="id_tags_str">Tags:</label>
-        <input type="text" id="id_tags_str" name="tags_str" class="textinput textInput form-control">
-      </div>
-      </table>
-      <button type="submit" class="btn btn-dark float-right">Submit</button>
-    </form>
-  {% endblock %}
+<form method="post" enctype="multipart/form-data">{% csrf_token %}
+  <table>
+  {{ form | crispy }}
+  <div id="div_id_tags_str">
+    <label for="id_tags_str">Tags:</label>
+    <input type="text" id="id_tags_str" name="tags_str" class="textinput textInput form-control">
+  </div>
+  </table>
+  <button type="submit" class="btn btn-dark float-right">Submit</button>
+</form>
+{{ form.media }}
+{% endblock %}
