--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -42,7 +42,7 @@
         <hr/>
 
         <!-- Post Content -->
-        <p>{{ post.content}}</p>
+        <p>{{ post.get_content_markdown | safe }}</p>
 
         <!--Tag Content-->
         {% if post.tags.exists %}
