로그인 기능 추가하기

--- a/blog/templates/blog/navbar.html
+++ b/blog/templates/blog/navbar.html
@@ -56,16 +56,16 @@
               <i class="fa-brands fa-google"></i>
               Log in with Google
             </a>
-            <button type="button" class="btn btn-outline-dark btn-block btn-sm">
+            <a roll="button" href="/accounts/login/" type="button" class="btn btn-outline-dark btn-block btn-sm">
               <i class="fa-regular fa-user"></i>
               Log in with Username
-            </button>
+            </a>
           </div>
           <div class="col-md-6 col-sm-12">
-            <button type="button" class="btn btn-outline-dark btn-block btn-sm">
+            <a roll="button" href="/accounts/signup/" type="button" class="btn btn-outline-dark btn-block btn-sm">
               <i class="fa-regular fa-envelope"></i>
               Sign up with E-mail
-            </button>
+            </a>
           </div>
         </div>
       </div>
