댓글 작성 폼 구현하기 - 로그인하지 않은 상태

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -78,12 +78,16 @@
   <div class="card my-4">
     <h5 class="card-header">Leave a Comment:</h5>
     <div class="card-body">
-      <form>
+      {% if user.is_authenticated %}
+      <form id="comment-form">
         <div class="form-group">
           <textarea class="form-control" rows="3"></textarea>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
+      {% else %}
+        <a roll="button" type="button" class="btn btn-outline-dark btn-block btn-sm" href="#" data-toggle="modal" data-target="#loginModal">Log in and leave a comment</a>
+      {% endif %}
     </div>
   </div>
           
