--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,4 +1,5 @@
 {% extends 'blog/base.html' %}
+{% load crispy_forms_tags %}
 
 {% block head_title %}{{ post.title }}| Blog{% endblock %}
 
@@ -79,9 +80,10 @@
     <h5 class="card-header">Leave a Comment:</h5>
     <div class="card-body">
       {% if user.is_authenticated %}
-      <form id="comment-form">
+      <form id="comment-form" method="POST" action="{{ post.get_absolute_url }}new_comment/">
+        {% csrf_token %}
         <div class="form-group">
-          <textarea class="form-control" rows="3"></textarea>
+          {{ comment_form | crispy }}
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
